--- a/Conlang Notepad/ssLoading.resx
+++ b/Conlang Notepad/ssLoading.resx
@@ -136,9 +136,9 @@ Background Angle=90
 Background Border Color=~50
 Background Highlight Color=0,255,255,255
 
-Progress Colors=#8e6656|#a27766
+Progress Colors=#bc8f8f|#a37474
 Progress Positions=0|1
-Progress Angle=-90
+Progress Angle=90
 Progress Border Color=~0
 Progress Highlight Color=40,255,255,255
 
